--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #000000;
-  border-radius: 10px;
-}
 
 h1 {
   color: #878787;
@@ -30,4 +23,13 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.weather-app {
+  padding: 20px;
+  border: 1px solid #000000;
+  border-radius: 10px;
 }
