styled temperature section

--- a/src/style.css
+++ b/src/style.css
@@ -31,5 +31,31 @@ li {
 .weather-app {
   padding: 20px;
   border: 1px solid #000000;
-  border-radius: 10px;
+  border-radius: 5px;
+}
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 10px;
+  height: 64px;
+  width: 64px;
+}
+
+.weather-temperature strong {
+  color: #000000;
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+  margin: 10px, 0px;
+}
+
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+}
+
+.units a {
+  text-decoration: none;
 }
