Updated unit conversion links

--- a/src/style.css
+++ b/src/style.css
@@ -62,3 +62,8 @@ li:first-letter {
 .units a {
   text-decoration: none;
 }
+
+.weather-temperature .active {
+  color: #878787;
+  cursor: default;
+}
