--- a/src/style.css
+++ b/src/style.css
@@ -67,3 +67,20 @@ li:first-letter {
   color: #878787;
   cursor: default;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  color: #000000;
+  opacity: 0.5;
+}
+.weather-forecast-temperature {
+  font-size: 13px;
+  color: #000000;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
